gccida/g0/asm_fprintf
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/asm_fprintf/src/final.c:4041:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[( unsigned __int8)c] & 4) != 0 || c == 46 ) 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/asm_fprintf/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/asm_fprintf/src/obj/final.o] Error 1
